--- a/style.css
+++ b/style.css
@@ -1,120 +1,54 @@
-/* STYLE SECTIONING TAGS */
-*{
-  margin: 0 px;
-  padding: 0 px;
-}
-body {
- background-color: #709dff; 
+* {
+	background-color: black;
+	font-family: 'Yeon Sung', cursive;
+	color: white;
 }
 
-/* STYLE TEXT */
-
-h1 {
-  color: black;
-  text-align: center;
-  font-family: "courier";
-}
-h3 {
-  color: black;
-  text-align: center;
-  background-color: white;
-  font-family: "courier";
-}
-p{
-  text-align: center;
-  color: black;
-  font-family: "courier";
-  margin-right: 40px;
-  margin-left: 40px;
-}
-  h2{
-    color: black;
-  text-align: center;
-  font-family: "courier";
-  }
-/* STYLE IMAGES */
-img {
-  max-height: 300px;
-  border: 3px solid black;
+.nav-container {
+	display: flex;
+	justify-content: space-between;
+	align-content: center;
+	width: 100%;
+	height: 50px;
 }
 
-.center {
-   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60%;
+.logo-ref {
+	display: flex;
+	justify-content: space-between;
 }
 
-.center8 {
-   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60%;
-  border-radius: 5%;
-}
-.center1 {
-   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 30%;
+.logo-ref img {
+	height: 50px;
+	width: 50px;
+	padding-left: 10px;
 }
 
-.center2 {
-   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
+.listed-items {
+	display: flex;
+	justify-content: space-between;
 }
 
-.center4{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  
-}
-/* STYLE NAV BAR */
-ul{
-  list-style-type: none;
-  background-color: white;
-  overflow: hidden;
-  padding: 1em;
-  text-align: center;
-  font-family: "courier";
-  font-size: 1.2em;
+.some-cases {
+	display: flex;
+	align-items: center;
 }
 
-li{
-  display: inline;
-
+ul li {
+	display: inline-block;
 }
 
-
-li a{
-  text-decoration: none;
-  color: black;
-  padding: 1 em; 
+ul li a{
+	padding: 10px 30px;
+	text-decoration: none;
 }
 
-li a:hover{
-  background-color: #464444;
+#sign-in{
+	display: flex;
+	align-items: center;
 }
 
-/* test */
-.test{
-  color: black;
-  text-align: center;
-  font-family: "courier";
-  list-style-type: none;
-  background-color: white;
-  overflow: hidden;
-  padding: 1em;
-  text-align: center;
-  font-family: "courier";
-  font-size: 1.2em;
- display: block;
-  margin-left: auto;
-  margin-right: auto;
+button {
+	border-radius: 50%;
+	background-color: lightgray;
+	color: black;
 }
-
-
