--- a/style.css
+++ b/style.css
@@ -34,7 +34,10 @@
 	display: flex;
 	align-items: center;
 }
-
+.center4 {
+	display: flex;
+	align-items: center;
+}
 ul li {
 	display: inline-block;
 }
