--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@
 	align-items: center;
 }
 .center1 {
-	display: flex;
-	width: 100%;
-	align-items: center;
-	height: 50px;
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 ul li {
 	display: inline-block;
