--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@
 	display: flex;
 	align-items: center;
 }
-.center1 {
+.center1 img {
 	display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
+  	margin-left: auto;
+  	margin-right: auto;
+  	width: 80%;
 }
 ul li {
 	display: inline-block;
