--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 	align-content: center;
 	width: 100%;
 	height: 50px;
+	color: white;
 }
 
 .logo-ref {
@@ -42,9 +43,10 @@ ul li {
 ul li a{
 	padding: 10px 30px;
 	text-decoration: none;
+	color: white;
 }
 .footer{
-	background-color: blue;
+	background-color: #000099;
 }
 footer{
 	background-color: blue;
