--- a/style.css
+++ b/style.css
@@ -55,9 +55,11 @@ footer{
   	padding: 0 px;
 	color: white;
 }
+
 .center2 {
-	display: block; 
-	margin-left: auto; 
-	margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
 }
 
