--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ ul li a{
 	color: white;
 }
 .footer{
-	background-color: #000099;
+	background-color: #0B0B45;
 }
 footer{
 	background-color: blue;
