--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ footer{
 	background-color: blue;
 	font-family: "courier";
 	margin: 0 px;
-  	padding: 0 px;
 	color: white;
+	padding-top: 10px;
 }
 
 .center2 {
