--- a/style.css
+++ b/style.css
@@ -43,15 +43,15 @@ ul li a{
 	text-decoration: none;
 	color: white;
 }
-.footer{
-	background-color: #0B0B45;
-}
+
 footer{
 	background-color: blue;
 	font-family: "courier";
 	margin: 0 px;
 	color: white;
+	background-color: #0B0B45;
 	padding-top: 10px;
+	height: 50px;
 }
 
 .center2 {
