--- a/style.css
+++ b/style.css
@@ -44,14 +44,13 @@ ul li a{
 	color: white;
 }
 
-footer{
+.footer{
 	background-color: blue;
 	font-family: "courier";
 	margin: 0 px;
 	color: white;
 	background-color: #0B0B45;
 	padding-top: 10px;
-	height: 50px;
 }
 
 .center2 {
