--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ h1 {
 .home {
   text-indent: 50px;
   text-align: justify;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 
@@ -63,7 +65,6 @@ h1 {
 .logo-ref img {
 	height: 50px;
 	width: 50px;
-	padding-left: 10px;
 }
 
 .listed-items {
