--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ ul li a{
 
 /* Content */
 .contenttravel {
-  background-color: #0B0B45;
+  background-color: #5CB6F9;
   padding: 10px;
   color: white;
 	
